--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "git": "^0.1.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.19"
   },
   "devDependencies": {
